--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/database.yml
+dump.rdb
 
 /public/packs
 /public/packs-test
