--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "axios": "^0.19.2",
     "jquery": "^3.5.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11",
     "vue-turbolinks": "^2.1.0"
