--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,11 +1,11 @@
 development:
   adapter: redis
-  url: redis://localhost
+  url: <%= ENV['REDIS_URL'] || 'redis://localhost' %>
 
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV['REDIS_URL'] || 'redis://localhost' %>
   channel_prefix: rnds_web_sniffer_production
